--- a/styles/main.css
+++ b/styles/main.css
@@ -91,7 +91,7 @@ footer p {
 
 .home-img {
     width: 100%;
-    height: 1450px;
+    height: 1000px;
 }
 
 .column {
@@ -102,7 +102,7 @@ footer p {
 .banner {
     position: relative;
     margin: 0;
-    height: 1450px;
+    height: 1000px;
 }
 
 .home-content {
@@ -281,5 +281,13 @@ input {
     
     footer p {
         font-size: 16px;
+    }
+
+    .home-img {
+        height: 1450px;
+    }
+    
+    .banner {
+        height: 1450px;
     }
 }
